<resources>
    <string name="app_name">ContactList</string>
    <string name="permissionDenied">請先至系統設定開啟相關權限後再回來使用喔！</string>
    <string name="hint">提示</string>
    <string name="sureToUpdate">確定要更新嗎?</string>
    <string name="noUpdate">未有更新資料！請重新輸入</string>
    <string name="permissonRequest">請先開啟使用者權限</string>
    <string name="ContactName">名字</string>
    <string name="ContactPhone">手機</string>
    <string name="dial">打給他/她</string>
    <string name="deleteData">刪掉他/她</string>
    <string name="deleteOK">刪除成功</string>
    <string name="chooseFunction">"請選擇功能"</string>
    <string name="updateData">更新</string>
    <string name="updateDataOK">更新成功</string>
    <string name="updateTo">更改為</string>
    <string name="yes">確定</string>
    <string name="no">取消</string>

    <string name="alertTitle">"選取清單"</string>
    <string name="scope">"請選擇要顯示的範圍"</string>
    <string name="sim">僅限sim卡</string>
    <string name="allData">所有資料</string>
    <string name="noData">sorry！找不到sim卡資料喔</string>
    <string name="wrongInput">"oops!名稱或電話格式有誤喔！"</string>
    <string name="addSuccess">"已新增成功至通訊錄！！"</string>

</resources>
