<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.r30_a.contactlist.ContactListActivity">

    <LinearLayout
        android:id="@+id/ContactLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="false"
            android:layout_weight="1"
            android:text="新增聯絡人" />
    </LinearLayout>


    <ListView
        android:id="@+id/ContactList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ContactLayout"
        android:layout_alignParentBottom="true"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/ContactLayout" />


</RelativeLayout>
